Imported java.sql.time;
Declared but not initialized private Time mTime.

--- a/app/src/main/res/layout/activity_planner.xml
+++ b/app/src/main/res/layout/activity_planner.xml
@@ -9,6 +9,12 @@
         android:layout_height="wrap_content" />
 
     <Button
+        android:id="@+id/addAct"
+        android:layout_width="266dp"
+        android:layout_height="47dp"
+        android:text="Add Activity"
+        />
+    <Button
         android:id="@+id/btn"
         android:layout_width="266dp"
         android:layout_height="47dp"
